--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -16,6 +16,9 @@ spring:
                 dialect: org.hibernate.dialect.MySQL8Dialect
                 format_sql: true
         database: mysql
+    jackson:
+        date-format: dd-MM-yyyy
+        time-zone: GMT+8
 logging:
     level:
       org.springframework.security.web: DEBUG
